--- a/app/app.component.html
+++ b/app/app.component.html
@@ -5,7 +5,7 @@
 
 <mat-toolbar color="primary">My empty table</mat-toolbar>
 
-<mat-table #table [dataSource]="dataSourceEmpty" matSort *ngIf="dataSourceEmpty.length > 0">
+<mat-table #table [dataSource]="dataSource" matSort *ngIf="dataSourceEmpty.length > 0">
 	<ng-container matColumnDef="Name">
 		<mat-header-cell *matHeaderCellDef mat-sort-header>Name </mat-header-cell>
 		<mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
